--- a/style.css
+++ b/style.css
@@ -263,6 +263,13 @@ form textarea {
   border-radius: 30px;
   color: white; }
 
+.myloc {
+border: none;
+background: #fcaf01;
+padding: 15px 25px;
+border-radius: 30px;
+color: white; }
+
 .map {
   height: 220px; }
 
